<resources>
    <string name="app_name">Note App Task</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">Login</string>
    <string name="username">USERNAME</string>
    <string name="comments">Comments</string>
    <string name="priority">Priority</string>
    <string name="date">Date</string>
    <string name="done">Done</string>
    <string name="new_task">New Task</string>
    <string name="create">create</string>
    <string name="task_title">Task Title</string>
    <string name="write_your_comment">Write your comment</string>
</resources>
